--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+
+    <label for="usuario-nombre">Ingrese usuario</label>
+    <input id="usuario-nombre" type="text">
+    <label for="usuario-contrasenia">Ingrese contraseña</label>
+    <input id="usuario-contrasenia" type="text">
+    <button onclick="verificar()">ingresar</button>
+
+    <p id="resultado"></p>
+
     <script src="script.js"></script>
 </body>
 </html>
